# G2T

./: CONTRIBUTING.md  README.md  pyproject.toml  readme.md
configs/: g2t_acdc.yaml  g2t_synapse.yaml
g2t/: __init__.py
g2t/models/: __init__.py  encoder.py  fad.py  g2t.py  lh_raam.py
g2t/training/: __init__.py  losses.py
scripts/: demo_g2t_forward.py  train_g2t.py
tests/: test_g2t_forward.py
