[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "g2t"
version = "0.1.0"
description = "Gate Guided Transformer for medical image segmentation"
requires-python = ">=3.9"
dependencies = ["torch>=2.1", "numpy>=1.23", "pyyaml>=6.0", "tqdm>=4.66", "pillow>=10.0"]

[tool.setuptools.packages.find]
include = ["g2t*"]
